fix: jitpack compile error